index.htmlに現在地取得処理追加

--- a/public/MapTest2.html
+++ b/public/MapTest2.html
@@ -27,13 +27,13 @@
 				latitude = position.coords.latitude;
 				longitude = position.coords.longitude;
 				
-				map.setCenter(latitude, longitude);
-				map.addMarker({
-					lat: latitude,
-					lng: longitude,
-					title:"場所",
-					infoWindow: {
-						content: '<p style="width:200px">現在地</p>'
+				//map.setCenter(latitude, longitude);
+				//map.addMarker({
+					//lat: latitude,
+					//lng: longitude,
+					//title:"場所",
+					//infoWindow: {
+						//content: '<p style="width:200px">現在地</p>'
 		            }
 		    	});
 		    					alert(latitude);
