--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,11 @@
 <!-- /<link rel="shortcut icon" href="icon URL.ico"> -->
 <!-- ▲ファビコン設置箇所▲ -->
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="js/gmaps.js"></script>
 <script type="text/javascript" src="js/jquery.bxSlider.min.js"></script>
+<script type="text/javascript" src="js/mapstyle.js"></script> 
 <script type="text/javascript">
 <!--
 $(function(){
@@ -30,38 +34,47 @@ $(function(){
 //ここを消すと左よりになります。
 	var Liwidth = $(".foot_nav ul li");
 	for(i=0; i<= Liwidth.length; i++){
-		$(".foot_nav ul").width(Liwidth.width()*i+(2*i)-2)
+		$(".foot_nav ul").width(Liwidth.width()*i+(2*i)-2);
 	};
 });
 -->
 </script>
-<script type="text/javascript" src="http://yourdomain/jquery.biggerlink.js"></script> 
+<!--<script type="text/javascript" src="http://yourdomain/jquery.biggerlink.js"></script> --> 
 <script type="text/javascript">
 <!--
-$(function(){
-	$(".cate_list li").biggerlink();
-});
+// $(function(){
+	// $(".cate_list li").biggerlink();
+// });
 -->
 </script>
 </head>
-<body>
+<body onload="getCurrentPos();">
 <div id="wrapper">
 <!-- ヘッダここから -->
 <header>
 
-	<!-- メニューここから -->
+	<!-- 
 	<div id="menu">
 	<nav>
-		<!-- <li><a href="about.html"><img src="img/icon/icon1.png" width="28" height="28" alt="About">About</a></li>
+		
+		<li><a href="about.html"><img src="img/icon/icon1.png" width="28" height="28" alt="About">About</a></li>
 		<li><a href="free.html"><img src="img/icon/icon2.png" width="28" height="28" alt="Free">Free</a></li>
 		<li><a href="free.html"><img src="img/icon/icon3.png" width="28" height="28" alt="Free">Free</a></li>
-		<li><a href="mailto:メールアドレス＠"><img src="img/icon/icon4.png" width="28" height="28" alt="Contact">Contact</a></li> -->
+		<li><a href="mailto:メールアドレス＠"><img src="img/icon/icon4.png" width="28" height="28" alt="Contact">Contact</a></li>
+
 	</nav>
-	</div><!-- /メニューここまで -->
+	</div>< 
+	
+	-->
 
 	<h1><img src="img/title.png" alt="駅doko" width="250"></h1>
 	<p class="btn_next"><a href="map01.html">検索GO</a></p>
-
+	<div id="map"></div>
+	
+	
+	<input type="text" id="inplatitude" />
+	<input type="text" id="inplongitude" />
+	
 </header><!-- /ヘッダここまで -->
 
 
