コントローラ追加

--- a/public/index.html
+++ b/public/index.html
@@ -68,15 +68,10 @@ $(function(){
 	-->
 
 	<h1><img src="img/title.png" alt="駅doko" width="250"></h1>
-	<p class="btn_next"><a href="map01.html">検索GO</a></p>
+	<p class="btn_next"><a href="locations/resultMap">検索GO</a></p>
 	<div id="map"></div>
 	
-	
-	<input type="text" id="inplatitude" />
-	<input type="text" id="inplongitude" />
-	
 </header><!-- /ヘッダここまで -->
-
 
 <!-- フッタここから -->
 <footer>
