現在地をセッションへ詰め→検索結果に表示完了！

--- a/public/index.html
+++ b/public/index.html
@@ -15,28 +15,27 @@
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script type="text/javascript" src="js/gmaps.js"></script>
-<script type="text/javascript" src="js/jquery.bxSlider.min.js"></script>
-<script type="text/javascript" src="js/mapstyle.js"></script> 
+<script type="text/javascript" src="js/location.js"></script> 
 <script type="text/javascript">
 <!--
-$(function(){
-	$("#slide").bxSlider({
-		auto: true,
-		speed: 800,
-		pause: 5000
-	});
-
-	$(".bx-prev").text("<");
-	$(".bx-next").text(">");
+// $(function(){
+	// $("#slide").bxSlider({
+		// auto: true,
+		// speed: 800,
+		// pause: 5000
+	// });
+// 
+	// $(".bx-prev").text("<");
+	// $(".bx-next").text(">");
 
 //フッターのアイコン付きメニューを
 //中央寄せにしています。
 //ここを消すと左よりになります。
-	var Liwidth = $(".foot_nav ul li");
-	for(i=0; i<= Liwidth.length; i++){
-		$(".foot_nav ul").width(Liwidth.width()*i+(2*i)-2);
-	};
-});
+	// var Liwidth = $(".foot_nav ul li");
+	// for(i=0; i<= Liwidth.length; i++){
+		// $(".foot_nav ul").width(Liwidth.width()*i+(2*i)-2);
+	// };
+// });
 -->
 </script>
 <!--<script type="text/javascript" src="http://yourdomain/jquery.biggerlink.js"></script> --> 
