現在位置をサーバに送る処理を追加

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 	-->
 
 	<h1><img src="img/title.png" alt="駅doko" width="250"></h1>
-	<p class="btn_next"><a href="locations/resultMap">検索GO</a></p>
+	<p class="btn_next"><a id="resultMapLink" href="locations/resultMap">検索GO</a></p>
 	<div id="map"></div>
 	
 </header><!-- /ヘッダここまで -->
